<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/img_back_l"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/shape_back"
        android:padding="@dimen/_12sdp"

        android:layout_margin="@dimen/_20sdp"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appname_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shop_online"
        android:textColor="@color/black"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold"
        android:fontFamily="@font/acmeregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/img_back_l"
        app:layout_constraintTop_toTopOf="@+id/img_back_l" />

    <TextView
        android:id="@+id/Login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/acmeregular"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back_l" />

    <TextView
        android:id="@+id/ditels_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in_with_one_of_the_following_options"
        android:textColor="@color/black"
        android:textSize="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="@+id/Login_text"
        app:layout_constraintTop_toBottomOf="@+id/Login_text" />

    <LinearLayout
        android:id="@+id/logo_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:maxWidth="@dimen/_30sdp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ditels_text">

        <ImageView
            android:id="@+id/google_back"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/shape_auth"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_8sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/twitter_back"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/shape_auth"
            android:layout_margin="@dimen/_10sdp"
            android:padding="@dimen/_8sdp"
            android:elevation="@dimen/_3sdp"
            android:src="@drawable/twitter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/apple_back"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/shape_auth"
            android:elevation="@dimen/_3sdp"
            android:padding="@dimen/_8sdp"
            android:layout_margin="@dimen/_10sdp"
            android:src="@drawable/apple"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/or"
        android:textSize="@dimen/_15ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_auth" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfild2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/_25sdp"
        app:boxBackgroundColor="#DEDEDE"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfild3"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:hint="Password"
        app:boxBackgroundColor="#DEDEDE"
        app:boxCornerRadiusBottomEnd="@dimen/_20sdp"
        app:boxCornerRadiusBottomStart="@dimen/_20sdp"
        app:boxCornerRadiusTopStart="@dimen/_20sdp"
        app:boxCornerRadiusTopEnd="@dimen/_20sdp"
        app:endIconMode="password_toggle"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfild2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_l"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/shape_btn_signup"
        android:backgroundTintMode="src_atop"
        android:inputType="text"
        android:text="@string/login"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textfild3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/already_have_an_account"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/login_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/sign_up"
        android:textColor="@color/red3"
        android:textStyle="bold"
        android:layout_marginLeft="@dimen/_3sdp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
